--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,8 +113,9 @@
                 android:id="@+id/answer_output"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_margin="8dp"/>
+                android:layout_margin="8dp"
+                android:textIsSelectable="true"
+                android:gravity="center" />
         </com.google.android.material.card.MaterialCardView>
 
     </androidx.core.widget.NestedScrollView>
